--- a/asset/style.css
+++ b/asset/style.css
@@ -101,10 +101,10 @@
     background: #FFF;
     padding: 20px;
     width:auto;
-    /* max-width: 500px; */
     margin: 20px auto;
+    /* max-width: 500px; */
   }
-
+  
 
 
 
@@ -226,7 +226,7 @@ button:hover{
 
 
 
-.w3l-index5 .new-block {
+ .video-container {
   display: grid;
   align-items: center;
   padding: 2rem 0;
@@ -283,6 +283,36 @@ button:hover{
 .video-sub-content span .video-play-icon:hover {
     transform: scale(1.1);
     transition: 0.3s ease-in-out;
+}
+
+
+/**
+ * Simple fade transition,
+ */
+ .mfp-fade.mfp-bg {
+	opacity: 0;
+	-webkit-transition: all 0.15s ease-out; 
+	-moz-transition: all 0.15s ease-out; 
+	transition: all 0.15s ease-out;
+}
+.mfp-fade.mfp-bg.mfp-ready {
+	opacity: 0.8;
+}
+.mfp-fade.mfp-bg.mfp-removing {
+	opacity: 0;
+}
+
+.mfp-fade.mfp-wrap .mfp-content {
+	opacity: 0;
+	-webkit-transition: all 0.15s ease-out; 
+	-moz-transition: all 0.15s ease-out; 
+	transition: all 0.15s ease-out;
+}
+.mfp-fade.mfp-wrap.mfp-ready .mfp-content {
+	opacity: 1;
+}
+.mfp-fade.mfp-wrap.mfp-removing .mfp-content {
+	opacity: 0;
 }
 
 @media (min-width: 1280px){
